@@ -1,3 +1,7 @@
+1999-05-20  Tim Jenness  <timj@jach.hawaii.edu>
+
+	* NBS.pm: Import only ems1_get_facility_error from EMS
+
 1998-06-29  Tim Jenness  <timj@jach.hawaii.edu>
 
 	* NBS.pm (NEXTKEY): Add ties to hash and scalar variables
